# Timer

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
interface/: logger.cpp  logger.h  main.cpp  timer.cpp  timer.h
qml/: TimerButton.qml  main.qml
